--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Front-End Developer Portfolio">
-    <title>Your Name - Front-End Developer</title>
+    <title>Skyler Godfrey</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,7 +19,6 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -29,8 +28,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hello, I'm <span>Your Name</span></h1>
-                <p>A passionate front-end developer creating interactive and responsive web experiences.</p>
+                <h1>Hello, I'm Skyler Godfrey</h1>
                 <a href="#projects" class="btn">View My Work</a>
             </div>
         </div>
@@ -42,7 +40,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <img src="assets/images/profile.jpg" alt="Your Name" class="profile-img">
-                <p>I’m a front-end developer with a strong foundation in HTML, CSS, JavaScript, and React. I specialize in building responsive and user-friendly websites that provide seamless user experiences.</p>
+                <p>I’m a software developer with a foundation in HTML, CSS, JavaScript. My main focus is on how my code can influence end-user decision making to accomplish goals.</p>
                 <p>With a passion for coding and design, I aim to continuously improve my skills and take on exciting projects.</p>
             </div>
         </div>
@@ -75,23 +73,10 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <form id="contact-form">
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="email" id="email" placeholder="Your Email" required>
-                <textarea id="message" placeholder="Your Message" required></textarea>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
-        </div>
-    </section>
-
     <!-- Footer Section -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 Skyler Godfrey. All rights reserved.</p>
             <div class="social-links">
                 <a href="https://github.com/yourusername" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
